@@ -34,33 +34,48 @@ intToUtf8(x, multiple = FALSE, allow_surrogate_pairs = FALSE)
   they run from \code{0} to \code{0x10FFFF} (with about 12\% being
   assigned by version 10.0 of the Unicode standard).
   
-  \code{intToUtf8} does not by default handle surrogate pairs (which
-  should not occur in UTF-32): inputs in the surrogate ranges are mapped
-  to \code{NA}.  They might occur if a UTF-16 byte stream has been read
-  as 2-byte integers (in the correct byte order), in which case
-  \code{allow_surrogate_pairs = TRUE} will try to interpret them (with
-  unmatched surrogate values still treated as \code{NA}).
+  \code{intToUtf8} does not by default handle surrogate pairs: inputs in
+  the surrogate ranges are mapped to \code{NA}.  They might occur if a
+  UTF-16 byte stream has been read as 2-byte integers (in the correct
+  byte order), in which case \code{allow_surrogate_pairs = TRUE} will
+  try to interpret them (with unmatched surrogate values still treated
+  as \code{NA}).
+}
+\section{Validity}{
+  Which code points are regarded as valid has changed over the lifetime
+  of UTF-8.  Originally all 32-bit unsigned integers were potentially
+  valid and could be converted to up to 6 bytes in UTF-8.  Since 2003 it
+  has been stated that there will never be valid code points larger than
+  \code{0x10FFFF}, and so valid UTF-8 encodings are never more than 4
+  bytes.
+
+  The code points in the surrogate-pair range \code{0xD000} to
+  \code{0xDFFF} are prohibited in UTF-8 and so are regarded as invalid
+  by \code{utf8ToInt} and by default by \code{intToUtf8}.
+
+  The position of \sQuote{noncharacters} (notably \code{0xFFFE} and
+  \code{0xFFFF}) was clarified by \sQuote{Corrigendum 9} in 2013.  These
+  are valid but will never be given an official interpretation.  (In some
+  earlier versions of \R \code{utf8ToInt} treated them as invalid.)
 }
 \value{
   \code{utf8ToInt} converts a length-one character string encoded in
-  UTF-8 to an integer vector of Unicode code points.  It checks validity
-  of the input and returns \code{NA} if it is invalid.  (Currently it
-  accepts UTF-8 encodings of code points greater than \code{0x10FFFF}:
-  these are no longer regarded as valid by the UTF-8 RFC and will in
-  future be mapped to \code{NA}.) 
+  UTF-8 to an integer vector of Unicode code points.
 
   \code{intToUtf8} converts a numeric vector of Unicode code points
   either (default) to a single character string or a character vector of
   single characters. Non-integral numeric values are truncated to
-  integers: values above the maximum are mapped to \code{NA}.  For a
-  single character string \code{0} is silently omitted: otherwise
-  \code{0} is mapped to \code{""}.  The \code{\link{Encoding}} of a
-  non-\code{NA} return value is declared as \code{"UTF-8"}.
+  integers.  For output to a single character string \code{0} is
+  silently omitted: otherwise \code{0} is mapped to \code{""}.  The
+  \code{\link{Encoding}} of a non-\code{NA} return value is declared as
+  \code{"UTF-8"}.
 
-  \code{NA} inputs are mapped to \code{NA} output.
+  Invalid and \code{NA} inputs are mapped to \code{NA} output.
 }
 \references{
   \url{https://tools.ietf.org/html/rfc3629}, the current standard for UTF-8.
+  
+  \url{http://www.unicode.org/versions/corrigendum9.html} for non-characters.
 }
 \examples{\donttest{
 ## will only display in some locales and fonts
